--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,6 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 DATABASE=mongodb+srv://harry:<PASSWORD>@cluster0.nzvmi.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=12345
 DATABASE_NAME=harry
+JWT_SECRET=N0m4tt3rh0wmuchtim3p4ssed4
+JWT_EXPIRES=90d
