--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=12345
 DATABASE_NAME=harry
 JWT_SECRET=N0m4tt3rh0wmuchtim3p4ssed4
 JWT_EXPIRES=90d
+
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_USERNAME=a141ee03ccc5cd
+EMAIL_PASSWORD=12ef3b1d7d372b
+EMAIL_PORT=25
