--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "slugify": "^1.6.4",
     "validator": "^13.7.0"
   },
