--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -16,6 +16,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.0.4",
+    "helmet": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2",
     "morgan": "^1.10.0",
